--- a/src/components/Info/style.scss
+++ b/src/components/Info/style.scss
@@ -4,9 +4,37 @@
 		width: calc(100% + 40px);
 	}
 
+	ul {
+		list-style: none;
+		padding: 0;
+	}
+	
+	.name {
+		color: #b81151;
+		font-size: 2em;
+		text-align: center;
+		font-family: 'Cinzel', serif;
+		
+		@media (min-width: 600px) {
+			display: none;
+		}
+	}
+
+	li {
+		margin-bottom: 10px;
+	}
+
+	i {
+		margin-right: 10px;
+	}
+
 	a {
-		color: white;
+		color: #222;
 		text-decoration: none;
+
+		@media (min-width: 600px) {
+			color: white;
+		}
 
 		&:hover {
 			text-decoration: underline;
