--- a/src/components/Experience/style.scss
+++ b/src/components/Experience/style.scss
@@ -13,12 +13,10 @@
 	h2 {
 		border-bottom: 2px solid #ad248d98;
 		margin-bottom: 0.5em;
-		margin-top: 30px;
-		text-align: center;
-
-		@media (min-width: 600px) {
-			text-align: left;
-			margin-top: 20px;
+		
+		@media (max-width: 599px) {
+			margin-top: 30px;
+			text-align: center;
 		}
 	}
 
