--- a/src/components/Info/style.scss
+++ b/src/components/Info/style.scss
@@ -20,6 +20,19 @@
 		}
 	}
 
+	.sub-text {
+		margin-top: -10px;
+		margin-bottom: 30px;
+		color: #666;
+		text-align: center;
+		font-style: italic;
+		
+		@media (min-width: 600px) {
+			display: none;
+		}
+
+	}
+
 	li {
 		margin-bottom: 10px;
 	}
